update DR Wav example to load FLAC and MP3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -323,6 +323,8 @@ target_link_libraries(portaudio_biometric_authenticate_callback PRIVATE portaudi
 add_executable(dr_wav_transcribe_callback
     examples/dr_wav/transcribe_callback.cpp
     examples/dr_wav/dr_wav.h
+    examples/dr_wav/dr_flac.h
+    examples/dr_wav/dr_mp3.h
     examples/dr_wav/audio_buffer.hpp
     examples/dr_wav/argparse.hpp
     examples/dr_wav/tqdm.hpp
