--- a/Dockerfile.Ubuntu.20.04
+++ b/Dockerfile.Ubuntu.20.04
@@ -47,6 +47,18 @@ RUN apt-get -y upgrade
 RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git libssl-dev
 
 # ----------------------------------------------------------------------------
+# MARK: Generate Makefiles
+# ----------------------------------------------------------------------------
+
+COPY ./cmake/common.cmake /cpp-sdk/cmake/common.cmake
+COPY CMakeLists.txt /cpp-sdk/
+
+# Change into the SDK directory and prepare the makefiles for a local
+# installation of protobuf and gRPC. Enable verbose output from `FetchContent`
+# to monitor the cloning of gRPC, which can be slow.
+RUN cd cpp-sdk && cmake . -DGRPC_FETCHCONTENT=ON -DFETCHCONTENT_QUIET=OFF
+
+# ----------------------------------------------------------------------------
 # MARK: Source Files
 # ----------------------------------------------------------------------------
 
@@ -56,13 +68,4 @@ ADD ./include /cpp-sdk/include
 ADD ./src /cpp-sdk/src
 ADD ./tests /cpp-sdk/tests
 ADD ./examples /cpp-sdk/examples
-COPY CMakeLists.txt /cpp-sdk/
-
-# ----------------------------------------------------------------------------
-# MARK: Generate Makefiles
-# ----------------------------------------------------------------------------
-
-# Change into the SDK directory and prepare the makefiles for a local
-# installation of protobuf and gRPC. Enable verbose output from `FetchContent`
-# to monitor the cloning of gRPC, which can be slow.
-RUN cd cpp-sdk && cmake . -DGRPC_FETCHCONTENT=ON -DFETCHCONTENT_QUIET=OFF -DBUILD_TESTS=ON
+RUN rm -rf /cpp-sdk/include/sensorycloud/generated/*
